<resources>

    <string name="app_name">Movisdo App</string>

    <string name="register_button">No tienes una cuenta? <b>Regístrate aquí</b></string>
    <string name="record">Record</string>
    <string name="buscar">Buscar</string>
    <string name="más">mas</string>
    <string name="pendiente">Pendiente</string>
    <string name="finalizado">Finalizado</string>
    <string name="cantidad">425</string>
    <string name="progreso">En progreso</string>
    <string name="_186">$186</string>
    <string name="north_sylvanland">North Sylvanland</string>
    <string name="thin_face_needle">Thin face needle</string>
    <string name="movisdo">Movisdo</string>
    <string name="share_now">share_now</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_sync">Sincronizar</string>
    <string name="action_settings">Settings</string>

    <string name="account_type">com.arsltech.developer.MovisdoApp.account</string>
    <string name="provider_authority">com.arsltech.developer.MovisdoApp</string>

    <string name="empty_list">No hay datos</string>

    <string name="title_activity_detail">Nuevo gasto</string>
    <string name="monto_hint">Monto</string>
    <string name="descripcion_hint">Descripción</string>
    <string name="etiqueta_title">Etiqueta</string>
    <string name="fecha_title">Fecha</string>
    <string-array name="etiquetas">
        <item>Comida</item>
        <item>Transporte</item>
        <item>Diversión</item>
    </string-array>
    <string name="boton">AGREGAR GASTO</string>
    <string name="guardar">Guardar</string>
    <string name="fecha_actual">Cargando fecha actual...</string>
    <string name="latitud">Cargando latitud...</string>
    <string name="longitud">Cargando longitud...</string>
    <string name="presencial_remoto">Presencial/Remoto</string>
    <string name="latitud_label">Latitud:</string>
    <string name="longitud_label">Longitud</string>
    <string name="fecha_actual_label">Fecha actual:</string>


</resources>
