<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Bridge"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:cardBackgroundColor="@color/dashboard_item_4"
        app:cardCornerRadius="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp"
            android:src="@drawable/ic_survey_80"
            app:tint="@color/white" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_14sdp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_40sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <TextView
                android:id="@+id/textEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_186"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textPregunta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:text="@string/thin_face_needle"
                android:textColor="#012B60"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/textEstado"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageLocation"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:src="@drawable/ic_area_150"
                app:layout_constraintStart_toStartOf="@+id/textPregunta"
                app:layout_constraintTop_toBottomOf="@+id/textPregunta"
                app:tint="#D61277" />

            <TextView
                android:id="@+id/textArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/north_sylvanland"
                android:textColor="@color/secondary_Text"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageLocation"
                app:layout_constraintStart_toEndOf="@+id/imageLocation"
                app:layout_constraintTop_toTopOf="@+id/imageLocation" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fd"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/ic_suggestion_96"
                app:layout_constraintStart_toStartOf="@+id/imageLocation"
                app:layout_constraintTop_toTopOf="@+id/textSugTemporal"
                app:tint="#D61277" />

            <TextView
                android:id="@+id/textSugTemporal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="10am-06pm"
                android:textColor="@color/secondary_Text"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textArea"
                app:layout_constraintTop_toBottomOf="@+id/textArea"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>