<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Bridge">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_14sdp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_20sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <TextView
                android:id="@+id/textEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_186"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textPregunta" />

            <TextView
                android:id="@+id/textPregunta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/thin_face_needle"
                android:textColor="#012B60"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/textEstado"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageLocation"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_phone_24"
                app:layout_constraintStart_toStartOf="@+id/textPregunta"
                app:layout_constraintTop_toBottomOf="@+id/textPregunta"
                app:tint="#D61277" />

            <TextView
                android:id="@+id/textArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/north_sylvanland"
                android:textColor="@color/secondary_Text"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageLocation"
                app:layout_constraintStart_toEndOf="@+id/imageLocation"
                app:layout_constraintTop_toTopOf="@+id/imageLocation"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fd"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/ic_location_24"
                app:layout_constraintStart_toStartOf="@+id/imageLocation"
                app:layout_constraintTop_toTopOf="@+id/textSugTemporal"
                app:tint="#D61277" />

            <TextView
                android:id="@+id/textSugTemporal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="10am-06pm"

                android:textColor="@color/secondary_Text"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@+id/textArea"
                app:layout_constraintTop_toBottomOf="@+id/textArea" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"

                android:background="@drawable/button_background"
                android:text="Guardar"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/search_bg"
                android:drawablePadding="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Escriba aquí..."
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/secondary_Text"
                android:textColorHint="@color/secondary_Text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView3"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView3"
                android:layout_width="336dp"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:padding="@dimen/_16sdp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSugTemporal" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>